Stopping header for going off-screen with this little trick

--- a/main.css
+++ b/main.css
@@ -6,8 +6,8 @@ html {
 
 body {
     display: flex;
-    height: 100vh;
-    margin: 0;
+    min-height: 100vh;
+    margin: 0 20px;
     align-items: center;
     justify-content: center;
 
